tests/Errors/Generic/Files/ByteOrderMark/Found.php
<html lang="en">
<body>
<p>This file begins with a byte order mark (BOM).</p>
</body>
</html>
